# balena-fin-coprocessor-base

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp  main.py  makefile
balena/: CMakeLists.txt  README.md
balena/config/: ble-configuration.h  hal-config-board.h  hal-config.h
balena/inc/: balena.h  config.h
balena/src/: balena.cpp
device/EFR32BG1B/Source/GCC/: efr32bg1b.ld
emdrv/: CMakeLists.txt
emdrv/config/: rtcdrv_config.h
emdrv/rtcdrv/config/: rtcdrv_config.h
hardware/: CMakeLists.txt
include/: README.md  Serial.h
include/balena/: balena.h
include/serial/: Serial.h
source/: README.md  main.cpp  test.cpp
source/protocol/balena/: balena.cpp
source/protocol/serial/: Serial.cpp
toolchain/: balena-sdk.cmake  balenafin.cmake  efm32-base.cmake  flash.in  jlink.cmake
